--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -137,7 +137,7 @@
 .story {
   background-color: #0a0a0a;
   color: white;
-  overflow-y: hidden;
+  overflow-x: hidden;
   .container {
     display: flex;
     flex-direction: row;
